# Azlon-demo

./: .gitignore  .windsurfrules  README.md  cleanup.sh  current_state.txt  docker-compose.yml  patent.txt  plan.md  start_server.sh  state.txt
.devcontainer/: devcontainer.json
.github/workflows/: backend-tests.yml
backend/: Dockerfile  Makefile  example.env  main.py  pyproject.toml  readme.md  schedule_workflow.py  swe_bench_runner.py  swe_runner.py
backend/baml_src/: clients.baml  generate_code.baml  generators.baml  schema.baml  validate_output.baml
backend/src/: client.py  e2b_functions.py  file_server.py  memory_manager.py  prompts.py  services.py
backend/src/baml_client/: async_client.py  inlinedbaml.py  partial_types.py  sync_client.py  type_builder.py  types.py
backend/src/functions/: baml_generate.txt  baml_validate.txt  functions.py
backend/src/utils/: file_handling.py
backend/src/workflows/: workflow.py
backend/tests/: conftest.py  test_e2b_functions.py  test_file_handling.py  test_file_server.py  test_functions.py  test_main.py  test_memory_manager.py  test_workflow.py
backend/tests/kaggle/: scrape_kaggle.py
frontend/src/components/: WorkflowForm.tsx
frontend/src/components/ui/: chart.tsx
frontend/src/pages/: Index.tsx
